k8s/app/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: orcamentos-app
  annotations:
    vault.hashicorp.com/agent-inject: "true"
