k8s/app/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orcamentos-api
  namespace: orcamentos-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orcamentos-api
  template:
    metadata:
      labels:
        app: orcamentos-api
    spec:
      containers:
        - name: orcamentos-api
          image: orcamentos-app:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
