k8s/app/ingress-app.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-app-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nest-app-service
            port:
              number: 80
